Use app instead of www as base name
We are converting most dockers to use /app as the standard mountpoint
for your code.  It makes sense to place this on /app here also.

--- a/default.conf
+++ b/default.conf
@@ -3,7 +3,7 @@ server {
     server_name  localhost;
 
     location / {
-        root   /www;
+        root   /app;
         index  index.html index.htm;
 
         # Try to host the file or the folder, fall back to
@@ -13,6 +13,6 @@ server {
 
     error_page   500 502 503 504 /50x.html;
     location = /50x.html {
-        root   /www;
+        root   /app;
     }
 }
