--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,16 @@
+upstream backend_app {
+    server backend;
+}
+
 server {
     listen       80;
-    server_name  localhost;
+
+    location /api/ {
+       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+       proxy_set_header Host $http_host;
+       proxy_redirect off;
+       proxy_pass http://backend_app;
+    }
 
     location / {
         root   /app;
