--- a/default.conf
+++ b/default.conf
@@ -9,7 +9,7 @@ server {
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header Host $http_host;
        proxy_redirect off;
-       proxy_pass http://backend;
+       proxy_pass http://backend_app/;
     }
 
     location / {
